Add basic HTML code

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-
+    <div id="carousel">
+      <ul>
+        <li><a href="https://www.pianolessons.com/piano-lessons/learn-to-play-piano.php"><img src="https://images84.fotosik.pl/1055/ff1f44cca06d2e15med.jpg" alt="piano" /></a></li>
+        <li><a href="https://tamingthesaxophone.com/saxophone-lessons" target="_blank"><img src="https://images84.fotosik.pl/1055/a6f2d302924e479cmed.jpg" alt="saxophone" /></a></li>
+        <li><a href="https://www.theguitarlesson.com/guitar-lesson-blog/guitar-lesson-review/best-guitar-websites/"><img src="https://images81.fotosik.pl/1056/d0567cff2dab4a3dmed.jpg" alt="guitar" /></a></li>
+        <li><a href="http://freepercussionlessons.com/"><img src="https://images83.fotosik.pl/1055/0ad8c53194842ae3med.jpg" alt="percussion" /></a></li>
+        <li><a href="http://fluteinfo.com/Lessons/flute_basics/index.html"><img src="https://images83.fotosik.pl/1055/37abdff8bc36b685med.jpg" alt="flute" /></a></li>
+      </ul>
+    </div>
 
     <!-- Scripts -->
     <script src="vendor/modernizr-3.5.0.min.js"></script>
