Add style <br> in style.css

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Carousel in jQuery</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
+  <br>
     <div id="carousel">
       <ul>
         <li><a href="https://www.pianolessons.com/piano-lessons/learn-to-play-piano.php"><img src="https://images84.fotosik.pl/1055/ff1f44cca06d2e15med.jpg" alt="piano" /></a></li>
